# cycbox

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  MCP_CLAUDE.md  README.md  README_CN.md  compose.yaml  env_example
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: flutter-linux-arm64.yml
crates/cbrt/: Cargo.toml
crates/cbrt-codec/: Cargo.toml  protocol.md
crates/cbrt-codec/locales/: en.ftl  zh.ftl
crates/cbrt-codec/src/: codec.rs  configurable.rs  lib.rs  manifestable.rs  tests.rs
crates/cbrt/lib/: cbrt.c  cbrt.h
crates/cbrt/locales/: en.ftl  zh.ftl
crates/cbrt/src/: codec.rs  lib.rs  manifestable.rs  parser.rs  tests.rs  transformer.rs
crates/cycbox-engine/: CLAUDE.md  Cargo.toml
crates/cycbox-engine/locales/: en.ftl  zh.ftl
crates/cycbox-engine/src/: command.rs  connection.rs  delay.rs  engine.rs  error.rs  l10n.rs  lib.rs  lua.rs  state.rs
crates/cycbox-engine/src/formatter/: hexdump.rs  mod.rs  terminal.rs
crates/cycbox-engine/src/tasks/: connection_task.rs  delay_queue_task.rs  engine_task.rs  mod.rs  repeating_message_task.rs
crates/cycbox-runtime/: Cargo.toml
crates/cycbox-runtime/locales/: en.ftl  zh.ftl
crates/cycbox-runtime/src/: lib.rs  run_mode.rs
crates/cycbox-runtime/src/codec/: cobs.rs  line.rs  mod.rs  passthrough.rs  slip.rs  timeout.rs
crates/cycbox-runtime/src/lua/: discord.rs  http.rs  influxdb.rs  mod.rs  ntfy.rs  redis.rs  smtp.rs  timescaledb.rs
crates/cycbox-runtime/src/transformer/: csv.rs  disable.rs  json.rs  mod.rs
crates/cycbox-sdk/: CLAUDE.md  Cargo.toml
crates/cycbox-sdk/src/: codec.rs  error.rs  l10n.rs  lib.rs  lua.rs  prelude.rs  run_mode.rs  transformer.rs  transport.rs
crates/cycbox-sdk/src/manifest/: form_condition.rs  form_field.rs  form_field_option.rs  form_group.rs  form_utils.rs  form_value.rs  manifest_values.rs  mod.rs
crates/cycbox-sdk/src/message/: builder.rs  content.rs  lua_functions.rs  lua_user_data.rs  mod.rs  value.rs
crates/cycbox-sdk/src/message_input/: converter.rs  mod.rs  registry.rs
crates/cycbox-sdk/tests/: test_content.rs  test_form_field.rs  test_form_utils.rs  test_l10n.rs  test_lua_functions.rs  test_manifest_values.rs  test_message.rs  test_message_input.rs  test_value.rs
crates/cycbox-sdk/tests/common/: mod.rs
crates/cycbox-serialport/: Cargo.toml  README.md
crates/cycbox-serialport/examples/: low_latency.rs
crates/cycbox-serialport/src/: lib.rs
crates/cycbox-serialport/src/posix/: mio_stream.rs  mod.rs  tokio_stream.rs
crates/cycbox-serialport/src/windows/: mod.rs  tokio_stream.rs
crates/cycbox-serialport/tests/: async_io_loopback.rs  config.rs
crates/serialport-transport/: Cargo.toml
crates/serialport-transport/locales/: en.ftl  zh.ftl
crates/serialport-transport/src/: lib.rs  manifestable.rs  utils.rs
examples/: AT_ML307R.lua  README.md  README_CN.md  discord_webhook.lua  frame_codec_http_timescaledb_smtp.lua  http.lua  modbus_eid041.lua  modbus_rtu_modbus_tcp_influxdb.lua  modbus_rtu_modbus_tcp_influxdb_me31.lua  modbus_rtu_mqtt_influxdb_ntfy_discord.lua  modbus_rtu_tcp_me31.lua  modbus_rtu_timescaledb_senseair_s8.lua  modbus_rtu_to_mqtt.lua  modbus_rtu_to_mqtt_eid041.lua  ntfy.lua  pms9103m.lua  pms9103m_file.lua  pms9103m_influxdb2.lua  pms9103m_influxdb3.lua  pms9103m_mqtt.lua  pms9103m_redis.lua  pms9103m_timescaledb.lua  serial_frame_batch_values_imu.lua  serial_frame_codec_discord_ntfy_smtp_notify_pms9103m.lua  serial_port_frame_codec_pms9103m.lua  serial_tcp_forwarding_batch_values.lua  smtp.lua  structured_frame_codec_pms9013m.lua
lua_examples/: modbus_eid041.lua  pms9103m.lua  serialport_to_tcp_mqtt.lua
lua_tests/: AT_ESP32.lua  AT_ML307R.lua  discord_webhook.lua  http.lua  ntfy.lua  pms9103m.lua  pms9103m_file.lua  pms9103m_influxdb2.lua  pms9103m_influxdb3.lua  pms9103m_mqtt.lua  pms9103m_redis.lua  pms9103m_timescaledb.lua  smtp.lua  tcp_csv_client.lua  tcp_json_client.lua
