[package]
name = "cycbox-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license = "MPL-2.0"
repository = "https://github.com/cycbox/cycbox"
description = "CycBox Engine - async actor-based runtime for IoT transport, codec, and message routing"

[lib]
name = "cycbox_engine"
crate-type = ["rlib"]

[dependencies]
cycbox-sdk = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
mlua = { workspace = true }
async-trait = { workspace = true }
rust-embed = { workspace = true }
once_cell = "1.21"
log = "0.4.27"
tokio-util = { version = "0.7.16", features = ["codec"] }
encoding_rs = "0.8"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
chrono = "0.4"


[target.'cfg(unix)'.dependencies]
nix = { version = "0.31.1", features = ["term", "time", "ioctl"] }
libc = "0.2.176"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_System_WindowsProgramming",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_Devices_Communication",
] }


[build-dependencies]

[lints.clippy]
type_complexity = "allow"
