[package]
name = "cycbox-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license = "MPL-2.0"
repository = "https://github.com/cycbox/cycbox"
description = "CycBox Runtime - codec, transformer, and Lua helper implementations for the CycBox engine"

[lib]
name = "cycbox_runtime"
crate-type = ["rlib"]

[[bin]]
name = "cycbox-runtime"
path = "src/bin/cycbox_runtime.rs"

[dependencies]
cycbox-sdk = { workspace = true }
cycbox-engine = { workspace = true }
rust-embed = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serialport-transport = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
mlua = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
bytes = "1.10.1"
indexmap = { version = "2.0", features = ["serde"] }
reqwest = { version = "0.13.2", features = ["default", "stream"] }
redis = { workspace = true }
tokio-postgres = "0.7"
deadpool-postgres = "0.14.1"
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "pool", "hostname", "builder", "rustls", "ring", "webpki-roots"] }

